fixed body overflow

--- a/src/App.sass
+++ b/src/App.sass
@@ -11,7 +11,8 @@ $light-grey: rgba(220, 220, 220, 1)
 
 body
      padding: 2rem
-     width: 100vw
+     width: 100%
+     min-height: 100vh
      color: $dark-grey
      background-color: $light-grey
 
@@ -35,4 +36,3 @@ button
      color: $dark-grey
      padding: 0
      margin: 0
-
