--- a/src/components/ArticlesIndex/ArticlesIndex.module.sass
+++ b/src/components/ArticlesIndex/ArticlesIndex.module.sass
@@ -24,11 +24,11 @@
      gap: .45rem
      margin: 0
      padding: 0
-     max-height: 2rem
+     max-height: 1.875rem
 
 .icons
      justify-self: end
-     height: 2rem
+     height: 1.875rem
      width: auto
      padding: 0
      margin: 0
@@ -38,12 +38,15 @@
 .ul
      grid-column: 1/3
      grid-row: 2/3
-
+     width: 100%
      overflow-x: scroll
      display: flex
      gap: .75rem
 
 .li
+     display: grid
+     grid-template-columns: 8fr 4fr
+     grid-template-rows: repeat(3, auto)
      height: max-content
      align-self: flex-start
      width: 800px
@@ -52,6 +55,8 @@
 img
      object-fit: cover
      width: 100%
+     max-height: 70vh
+     grid-column: 1/3
 
 .li:nth-child(1)
      width: 800px
@@ -68,6 +73,24 @@ img
      img
           height: 450px
 
+     .subHeading
+          grid-column: 1/3
+
+     .artInfoCont
+          margin-top: 2rem
+          grid-column: 1 / 3
+          p
+               text-align: start
+               width: 100%
+
 .li:nth-child(6)
      img
           height: 710px
+
+////////////////////////////////// captions //////////////////////////////////
+
+.artInfoCont
+     p
+          font: 500 1rem "Public Sans",sans-serif
+          text-transform: none
+          text-align: end
